# sEMG_diff

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
doc/: NINAPRO_DB2_cross_subject_tasklist.md
docs/: implementation_status.md
scripts/: build_db2_windows.py  check_db2_integrity.py  plot_results.py  run_cnn_baseline.py  run_coral_baseline.py  run_traditional_baseline.py
src/semg_diff/: __init__.py  config.py  utils.py
src/semg_diff/data/: __init__.py  db2.py  preprocessing.py  windowing.py
src/semg_diff/evaluation/: metrics.py
src/semg_diff/features/: time_domain.py
src/semg_diff/models/: __init__.py  cnn.py  traditional.py
src/semg_diff/stable_learning/: __init__.py  coral.py  weights.py
src/semg_diff/training/: __init__.py  cnn_trainer.py  splits.py  torch_data.py
