[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semg-diff"
version = "0.1.0"
description = "Ninapro DB2 cross-subject sEMG gesture recognition experiments."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "tqdm",
  "pyyaml",
  "torch",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
